# 2DPlatformer

./: .gitignore  CMakeLists.txt
2DPlatformer/: 2DPlatformer.cpp  CMakeLists.txt  globalStore.cpp  main.cpp
2DPlatformer/include/game/: globalStore.hpp  main.hpp
2DPlatformer/shaders/: flatShaderFrag.glsl  flatShaderVert.glsl
lib/: CMakeLists.txt
lib/engine/: buffer.cpp  camera.cpp  mesh.cpp  shader.cpp  sprite.cpp  texture.cpp
lib/gui/: window.cpp
lib/include/engine/: buffer.hpp  camera.hpp  mesh.hpp  shader.hpp  sprite.hpp  texture.hpp
lib/include/gui/: window.hpp
shaders/: flatShaderFrag.glsl  flatShaderVert.glsl
